# agent-riggs

./: .gitignore  .readthedocs.yml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  cli-reference.md  configuration.md  index.md  integration.md  mcp.md  the-ratchet.md  tutorial.md
docs/superpowers/plans/: 2026-03-29-agent-riggs.md  2026-03-30-documentation.md
docs/superpowers/specs/: 2026-03-29-agent-riggs-design.md  2026-03-30-documentation-design.md
src/agent_riggs/: __init__.py  assembly.py  cli.py  config.py  service.py  store.py
src/agent_riggs/briefing/: project.py  session.py
src/agent_riggs/ingest/: pipeline.py
src/agent_riggs/mcp/: server.py
src/agent_riggs/metrics/: compute.py  trends.py
src/agent_riggs/plugins/: base.py  briefing.py  ingest.py  metrics.py  ratchet.py  sandbox.py  trust.py
src/agent_riggs/ratchet/: aggregator.py  candidates.py  history.py  promotions.py
src/agent_riggs/sandbox/: grades.py  integration.py  recommendations.py
src/agent_riggs/trust/: events.py  ewma.py  scorer.py  (+1 more)
tests/: conftest.py  test_config.py  test_service.py  test_store.py
tests/test_briefing/: test_session.py
tests/test_cli/: test_init.py  test_status.py
tests/test_ingest/: test_blq_source.py  test_fledgling_source.py  test_kibitzer_source.py  test_lackpy_source.py  test_pipeline.py
tests/test_metrics/: test_compute.py  test_trends.py
tests/test_ratchet/: test_candidates.py  test_promotions.py
tests/test_trust/: test_events.py  test_ewma.py  test_scorer.py  test_transitions.py
(+6 files in other folders)
