[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-riggs"
version = "0.1.1"
description = "Cross-session memory and analysis layer for the Rigged tool suite"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Teague Sterling" },
]
keywords = ["claude-code", "mcp", "agent", "trust", "ratchet", "duckdb"]

dependencies = [
    "click>=8.1",
    "duckdb>=1.0",
    "pytz>=2024.1",
    "mcp[cli]>=1.0",
    "tomli-w>=1.0",
]

[project.scripts]
agent-riggs = "agent_riggs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_riggs"]

[project.optional-dependencies]
full = []
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
